--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/*  */
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 100%; */ /* Savol :foiz bilan bersa to'g'ri ishlamayapti */
+  width: 99vw; /* 100vw berilsa scroll chiqib qovotti, 98vw berilsa ochiq joy qovotti */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 25px;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.dukkan-market {
+  height: 100vh;
+
+  width: 100%;
 }
 
-.card {
-  padding: 2em;
+.dukkan-logo {
+  width: 300px;
+  height: 300px;
 }
 
-.read-the-docs {
-  color: #888;
-}
+/* .test-span {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: #29b629;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 35px;
+  color: white;
+} */
